2023-09-19  Julien Bect  <julien.bect@centralesupelec.fr>

	Removed deprecated stk_length function

	* arrays/generic/stk_length.m: Removed.
	* arrays/@stk_dataframe/stk_length.m: Removed.
	* admin/octpkg/INDEX: Update Octave package index.
	* NEWS.md: Advertise the change.

2023-09-18  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_lm_: Base class for @tk_lm_* objects

	* lm/@stk_lm_/stk_lm_.m: Constructor.
	* lm/@stk_lm_/cat.m: Overload base function.
	* lm/@stk_lm_/disp.m: Overload base function.
	* lm/@stk_lm_/horzcat.m: Overload base function.
	* lm/@stk_lm_affine/stk_lm_affine.m: Derive from base class.
	* lm/@stk_lm_constant/stk_lm_constant.m: Idem.
	* lm/@stk_lm_cubic/stk_lm_cubic.m: Idem.
	* lm/@stk_lm_matrix/stk_lm_matrix.m: Idem.
	* lm/@stk_lm_null/stk_lm_null.m: Idem.
	* lm/@stk_lm_quadratic/stk_lm_quadratic.m: Idem.
	* admin/octpkg/INDEX: Update Octave package index.

	[Changes imported manually from branch `lm-param`, written in 2021.]

2023-09-12  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove deprecated stk_sf_* functions

	* covfcs/rbf/stk_sf_gausscorr.m: Deleted.
	* covfcs/rbf/stk_sf_matern.m: Deleted.
	* covfcs/rbf/stk_sf_matern32.m: Deleted.
	* covfcs/rbf/stk_sf_matern52.m: Deleted.
	* misc/options/stk_options_get.m: Remove special case.
	* misc/options/stk_options_set.m: Remove special case.
	* admin/octpkg/INDEX: Update Octave package index.
	* NEWS.md: Advertise the change.

2023-09-11  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_nullcov.m: New function, which computes a null covariance matrix

	* stk_nullcov.m: New function, which computes a null covariance matrix.
	* model/prior_struct/stk_covmat_noise.m: Use `stk_nullcov`.
	* admin/octpkg/INDEX: Update Octave package index.
	* NEWS.md: Advertise the change.

	[Changes imported manually from branch `lm-param`, written in 2021.]

2023-09-11  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_covmat_noise.m: Remove unused outputs P1, P2
